--- a/index.html
+++ b/index.html
@@ -10,21 +10,14 @@
 <body>
     <header>
         <nav class="navbar">
-
-            <div class="nav-menu">
-                <div class="logo">
-                    <img src="assets/Logo_ML.png" alt="Logo_ML">
-                </div>
-            </div>
-
-            <div class="input-block"> 
-                <input type="search" id="busca" name="q">
-                <button type="submit">
-                    <img src="/assets/ic_Search.png" alt="">
-                </button>
+            <div class="flex align-items-center">
+                <img src="/assets/Logo_ML.png" class="w-auto" onload="SVGInject(this)" />
+                <input type="text"></input>
             </div>
         </nav>
     </header>
+
+    <main>
     
     <h2>Electrónica, Audio y Video > iPod > Reproductores > iPod touch > 32 GB</h2>
 
@@ -40,5 +33,7 @@
             <p>Capital Federal</p>
         </div>
     </section>
+
+    </main>
 </body>
 </html>
