--- a/index.html
+++ b/index.html
@@ -22,15 +22,22 @@
     <h2>Electrónica, Audio y Video > iPod > Reproductores > iPod touch > 32 GB</h2>
 
     <section>
-        <div class="img-product">
-            <img src="/assets/ipod.jpeg" alt="ipod">
-        </div>
-        <div class="info-product">
-            <h1>$ 1.980</h1>
-            <p>Apple iPod Touch 5g 16gb Negro Igual A Nuevo Completo Unico!</p>
-        </div>
-        <div class="end-product">
-            <p>Capital Federal</p>
+
+        <div class="item">
+        
+            <div class="img-product">
+                <!-- <img src="/assets/ipod.jpeg" alt="ipod"> -->
+            </div>
+
+            <div class="info-product">
+                <h1>$ 1.980</h1>
+                <p>Apple iPod Touch 5g 16gb Negro Igual A Nuevo Completo Unico!</p>
+            </div>
+
+            <div class="end-product">
+                <p>Capital Federal</p>
+            </div>
+
         </div>
     </section>
 
